--- a/client/src/components/css/mobile-stats.css
+++ b/client/src/components/css/mobile-stats.css
@@ -36,7 +36,7 @@ div.header {
 
 .standings div {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   /* gap: var(--spacing-small); */
 
   margin-bottom: var(--spacing-base);
@@ -54,7 +54,7 @@ div.header {
 }
 
 .standings div span:nth-child(2) {
-  font-size: var(--text-regular);
+  font-size: var(--text-base);
 }
 
 .standings div span:nth-child(1) {
@@ -65,13 +65,15 @@ div.header {
   margin-left: auto;
 }
 
-.top_scorer .standings div span:nth-child(3) {
+.top_scorer .standings div span:nth-child(3),
+.top_scorer .standings div span:nth-child(4) {
+  margin-right: 0;
   font-size: var(--text-small);
 }
 
-.standings div span:nth-child(4) {
+.top_scorer .standings div span:nth-child(4) {
+  font-family: "Maison-mono", monospace;
   margin: 0 var(--spacing-small);
-  font-size: var(--text-small);
 }
 
 .standings div span:last-child {
