--- a/client/src/components/css/design_system.css
+++ b/client/src/components/css/design_system.css
@@ -34,7 +34,8 @@
   --palerV: #e1d9fb;
   --darkV: #100459;
   --accentR: #e63060;
-  --paleR: #fad6df;
+  --paleR: #f083a0;
+  --darkR: #2e0a13;
 
   /* Typography */
   --main-font: "MontRegular", sans-serif;
