--- a/client/src/components/css/fixtures.css
+++ b/client/src/components/css/fixtures.css
@@ -42,25 +42,37 @@
   height: 25px;
 }
 
+.schedule-info {
+  display: flex;
+  align-itmes: center;
+  margin: var(--spacing-medium) 0 var(--spacing-small);
+}
+
+.schedule-info .__postponed {
+  margin-left: auto;
+  padding: var(--spacing-base) var(--spacing-medium);
+  font-size: var(--text-xxsmall);
+  font-family: var(--alt-font);
+  color: var(--darkR);
+  background: var(--paleR);
+  border-radius: var(--spacing-regular);
+  box-shadow: inset 0 -2px var(--darkR);
+}
+
 h3,
 h4 {
   font-weight: lighter;
   font-family: var(--main-font);
   color: var(--wht);
-
-  margin: var(--spacing-medium) 0 var(--spacing-small);
 }
 
 h3 {
   font-size: var(--text-base);
+  margin: var(--spacing-medium) 0 var(--spacing-small);
 }
 
 h4 {
   font-size: var(--text-small);
-}
-
-h4:first-child {
-  margin-top: var(--spacing-medium);
 }
 
 .fixture,
