changed route to modal

--- a/client/src/components/css/fixtures.css
+++ b/client/src/components/css/fixtures.css
@@ -44,7 +44,7 @@
 
 .schedule-info {
   display: flex;
-  align-itmes: center;
+  align-items: center;
   margin: var(--spacing-medium) 0 var(--spacing-small);
 }
 
