--- a/admin/src/design-system.css
+++ b/admin/src/design-system.css
@@ -33,6 +33,7 @@
   --clr-violet-800: #0b004d;
   --clr-violet-700: #23224a;
   --clr-violet-500: #9791b3;
+  --clr-violet-400: #bbb1f2;
   --clr-violet-300: #d7cfff;
   --clr-violet-100: #fff;
 
