--- a/admin/src/pages/css/dashboard.css
+++ b/admin/src/pages/css/dashboard.css
@@ -211,6 +211,10 @@ select {
   border-right: 1px solid var(--clr-violet-300);
 }
 
+.__score p {
+  text-align: right;
+}
+
 .fixture-gw p {
   margin-top: var(--spacing-small);
   color: var(--clr-violet-100);
@@ -238,6 +242,8 @@ select {
 */
 
 .modal-container {
+  min-height: 100vh;
+  overflow: auto;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -297,22 +303,43 @@ select {
   color: var(--clr-violet-400);
 }
 
+.modal__close {
+  position: fixed;
+  right: var(--spacing-base);
+  bottom: 0;
+
+  border: 2px solid var(--clr-brand-400);
+  background: var(--clr-violet-700);
+  color: var(--clr-violet-100);
+  border-radius: 50%;
+  height: var(--spacing-xlarge);
+  width: var(--spacing-xlarge);
+
+  font-size: var(--text-xsmall);
+}
+
 /* Fulltime modal */
 .modal--ft {
   background: var(--clr-violet-700);
-  border-top: none;
+  /* border-top: none; */
 
-  border-top-left-radius: var(--spacing-base);
+  border-top-left-radius: var(--spacing-regular);
 }
 
-.scoreline--ft {
+.modal--ft h3 {
+  text-align: center;
+  color: var(--clr-violet-100);
+}
+
+.ft__scoreline {
   display: flex;
   align-items: center;
+  gap: 1px;
 
   background: var(--clr-violet-900);
 }
 
-.scoreline--ft > div {
+.ft__scoreline > div {
   flex-grow: 1;
   flex-basis: 0;
 
@@ -327,9 +354,52 @@ select {
   display: inline-block;
 
   background: var(--clr-violet-400);
+  color: var(--clr-violet-900);
+
+  font-size: var(--text-large);
+
+  text-align: center;
+  line-height: var(--spacing-xlarge);
 }
 
-.ft__score + p {
+.ft__side p {
   flex-grow: 1;
   text-align: center;
+
+  color: var(--clr-violet-300);
+}
+
+.ft__scorers {
+  background: var(--clr-violet-300);
+  padding: var(--spacing-regular);
+
+  display: flex;
+  /* align-items: center; */
+}
+
+.ft__scorers > div {
+  flex-grow: 1;
+  flex-basis: 0;
+
+  padding: var(--spacing-base);
+}
+
+.ft__scorers > div:first-child {
+  border-right: 1px solid var(--clr-violet-900);
+  text-align: right;
+}
+
+.ft__scorer {
+  color: var(--clr-violet-900);
+  margin-bottom: var(--spacing-regular);
+}
+
+.ft__edit {
+  background: var(--clr-violet-600);
+  color: var(--clr-violet-100);
+
+  margin-top: var(--spacing-regular);
+  padding: var(--spacing-base) var(--spacing-large);
+
+  font-size: var(--text-base);
 }
