--- a/client/src/components/css/main.css
+++ b/client/src/components/css/main.css
@@ -34,19 +34,20 @@ main .wrapper {
 }
 
 main.desktop-view {
-  max-width: 1300px;
+  /* max-width: 1300px; */
   margin: auto;
   height: 100vh;
   overflow-y: hidden;
 
   display: grid;
-  grid-template-columns: 1fr 450px;
-  grid-column-gap: var(--spacing-regular);
+  grid-template-columns: 1fr 375px 375px;
+  grid-column-gap: var(--spacing-medium);
   padding: var(--spacing-large);
 }
 
 main.desktop-view aside {
   overflow: auto;
+  position: relative;
 }
 
 header {
