Add about page to mobile
fixes #8

--- a/client/src/components/css/design_system.css
+++ b/client/src/components/css/design_system.css
@@ -29,6 +29,7 @@
   --darkG: #0d7354;
   --brandG: #19e6a8;
   --paleG: #cffcef;
+  --palerG: #e8f9f4;
   --brightV: #9381ff;
   --paleV: #bbb1f2;
   --palerV: #e1d9fb;
