--- a/client/src/components/css/fixtures.css
+++ b/client/src/components/css/fixtures.css
@@ -53,10 +53,9 @@
   padding: var(--spacing-base) var(--spacing-medium);
   font-size: var(--text-xxsmall);
   font-family: var(--alt-font);
-  color: var(--darkR);
-  background: var(--paleR);
+  color: var(--paleR);
   border-radius: var(--spacing-regular);
-  box-shadow: inset 0 -2px var(--darkR);
+  border: 1px solid currentColor;
 }
 
 h3,
